# rust-midlife-crisis

./: Cargo.toml  README.md  go.mod
cmd/: main.go
internal/game-map/: entity.go
src/: main.rs  player.rs
